[package]
name = "bevy_tower_defense"
version = "0.1.0"
authors = ["Leopold Johannes Meinel"]
edition = "2021"
description = "A sample project to test the bevy game engine"
homepage = "https://leo.meinel.dev/bevy_tower_defense"
repository = "https://github.com/LeoMeinel/bevy_tower_defense"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
bevy = "0.8.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
